--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 							if(expired[productData['Code']]<=1) {
 								expired[productData['Code']]=1;
 							} else {
-								expired[productData['Code']]=Number(expired[productData['Code']]) + 1;
+								expired[productData['Code']]++;
 							}
 							$('#expiredList').hide();
-							$('#expiredList').val('');
+							$('#expiredList').html('');
 							 $.each(expired, function(key, value) {
 								 $("#expiredList").append('<div class="nd2-card"><div class="card-title "><h3 class="card-primary-title">'+ products[key].Description +'<span class="numberCircle pull-right upcCount">'+ value +'</span></h3><h5 class="card-subtitle">'+ key +' ' + products[key].BasePrice + '</h5></div>');
 							 });
