Error of some sort

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 							} else {
 								expired[productData['Code']]++;
 							}
+							alert(JSON.stringify(expired));
 							$('#expiredList').hide();
 							$('#expiredList').html('');
 							 $.each(expired, function(key, value) {
